fix js lib and make home view complete

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9530,9 +9530,9 @@ h1, h2, h3, h4, h5,
 textarea.form-control {
   height: inherit !important; }
 
-.ftco-animate {
-  opacity: 0;
-  visibility: hidden; }
+/*.ftco-animate {*/
+/*  opacity: 0;*/
+/*  visibility: hidden; }*/
 
 .bg-primary {
   background: #dbcc8f !important; }
